bk_ida/gccida/g2/dbxout_symbol
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_symbol/src/dbxout.c:2319:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_symbol/src/dbxout.c:2414:20: error: expected expression
v20 = ( tree_node *)*( &global_trees + 27); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_symbol/src/dbxout.c:2414:9: error: use of undeclared identifier 'tree_node'
v20 = ( tree_node *)*( &global_trees + 27); 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_symbol/src/obj/dbxout.o] Error 1
